exports[`apis/StyleSheet/registry resolve with register, resolves to className 1`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "3px",
    "borderBottomWidth": "2px",
    "borderLeftColor": "3px",
    "borderLeftWidth": "2px",
    "borderRightColor": "3px",
    "borderRightWidth": "2px",
    "borderTopColor": "3px",
    "borderTopWidth": "2px",
    "left": "6px",
    "pointerEvents": "7px",
    "position": "5px",
    "width": "4px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve with register, resolves to className 2`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "3px",
    "borderBottomWidth": "2px",
    "borderLeftColor": "3px",
    "borderLeftWidth": "2px",
    "borderRightColor": "3px",
    "borderRightWidth": "2px",
    "borderTopColor": "3px",
    "borderTopWidth": "2px",
    "left": "6px",
    "pointerEvents": "7px",
    "position": "5px",
    "width": "8px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve with register, resolves to className 3`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "3px",
    "borderBottomWidth": "2px",
    "borderLeftColor": "3px",
    "borderLeftWidth": "2px",
    "borderRightColor": "3px",
    "borderRightWidth": "2px",
    "borderTopColor": "3px",
    "borderTopWidth": "2px",
    "left": "6px",
    "pointerEvents": "7px",
    "position": "5px",
    "width": "4px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve with register, resolves to mixed 1`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "10px",
    "pointerEvents": "11px",
    "position": "9px",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve with register, resolves to mixed 2`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "10px",
    "pointerEvents": "11px",
    "position": "9px",
    "width": "12px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve with register, resolves to mixed 3`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "10px",
    "pointerEvents": "11px",
    "position": "9px",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve without register, resolves to inline styles 1`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "pointerEvents": "box-only",
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve without register, resolves to inline styles 2`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "pointerEvents": "box-only",
    "position": "absolute",
    "width": "200px",
  },
}
`;

exports[`apis/StyleSheet/registry resolve without register, resolves to inline styles 3`] = `
Object {
  "className": "
",
  "style": Object {
    "borderBottomColor": "red",
    "borderBottomWidth": "0px",
    "borderLeftColor": "red",
    "borderLeftWidth": "0px",
    "borderRightColor": "red",
    "borderRightWidth": "0px",
    "borderTopColor": "red",
    "borderTopWidth": "0px",
    "left": "50px",
    "pointerEvents": "box-only",
    "position": "absolute",
    "width": "100px",
  },
}
`;
